# di_mebel

./: .env  .gitignore  Dockerfile  database.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  wait-for-it.sh
project/: settings.py  urls.py
src/furniture/: admin.py  models.py  router.py  urls.py  views.py
src/furniture/migrations/: 0001_initial.py  0002_image_category_image_name.py  0003_delete_productimage.py  0004_image_furniture_id.py  0005_color_alter_image_furniture_id_furniture_colors.py  0005_color_alter_image_furniture_id_furniturecolor_and_more.py  0006_color_name.py
src/homepage/: admin.py  models.py  urls.py  views.py
src/homepage/migrations/: 0001_initial.py  0002_delete_team.py  0003_initial.py
src/homepage/team/: admin.py  models.py  urls.py  view.py  views.py
src/vacancy/: forms.py  models.py  urls.py  views.py
src/vacancy/migrations/: 0001_initial.py
templates/frontend/: index.html
