[tool.poetry]
name = "di-mebel"
version = "0.1.0"
description = ""
authors = ["Artem <loizgg15@gmail.com>"]
readme = "README.md"
package-mode = false



[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.6"
mysqlclient = "^2.2.7"
requests = "^2.32.3"
djangorestframework = "^3.15.2"
pillow = "^11.1.0"
django-cors-headers = "^4.7.0"
sqlalchemy = "^2.0.40"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
